2021-11-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Apply same logic with separate to command, as with "to" at end of expression, when result contains no unit
	* Increase the number of optional custom buttons from 5 to 20

2021-11-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove associated bookmark from menu when removing history item
	* Select history row on go to bookmark
	* Restore position and selection when after editing data object
	* Set correct reference property value when first editing names of new object

2021-11-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not show division by zero in percentage calculation dialog

2021-11-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Data set (and property) edit dialog improvements - set file and name (if not edited) from title, enabled property options based on value type, hide "Value uses brackets", (un)localize unit expression, etc.
	* Improved layout in edit dialogs
	* Disable OK button in edit dialogs if name is empty

2021-11-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use editable combo box for data object argument in insert function dialog
	* Use small text size and use line wrap for argument description in insert function dialog
	* Replace *, /, - with corresponding operator symbols, and vice versa, in more cases (e.g. in edit dialogs)
	* Disable name edit dialog for composite units
	* Do not show overwrite question for replacement of temporary functions, units, and variables
	* Replace occurences of old unit when a unit is edited and switched to a different class
	* (Un)localize subfunction expressions in function edit dialog
	* Localize variable uncertainty value in variable edit dialog
	* Use PACKAGE_LOCALE_DIR instead of getPackageLocaleDir() (from libqalculate), except on Windows

2021-10-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make history text somewhat selectable (single click on selected item edits cell with non-editable entry)
