@@ -1,3 +1,8 @@
+2021-11-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add as multiple functions if plot expression results in matrix (e.g. root(x, [3,4,5]))
+	* Fix plot expression with localized decimal separator
+
 2021-11-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Apply same logic with separate to command, as with "to" at end of expression, when result contains no unit
